hphp/test/vm/hopt_sprop_accessibility.php.exp
HipHop Fatal error: Invalid static property access: A::priv in hphp/test/vm/hopt_sprop_accessibility.php on line 4
